# ClinicalTrialSimulator

./: .cursorignore  .gitignore  Instructions.md  README.md  learning.md  pyproject.toml
config/: mcp_servers.json
frontend/: index.html
scripts/: launch.py
servers/pk_sim_mcp/: __init__.py  __main__.py  pk_models.py  server.py
servers/pubmed_mcp/: __init__.py  __main__.py  server.py
servers/recruitment_mcp/: __init__.py  __main__.py  server.py
servers/safety_mcp/: __init__.py  __main__.py  server.py
servers/viz_mcp/: __init__.py  __main__.py  server.py
src/clinical_trial_simulator/: agent.py  api.py  llm_agents.py  mcp_manager.py  orchestrator.py  phenotype_params.py  run_trial.py  run_trial_from_goal.py  schemas.py
src/clinical_trial_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_agent.py  test_mcp_manager.py  test_mcp_servers.py  test_pk_models.py
